gcc/ChangeLog: PR debug/41225 * tree-vect-stmts.c (vect_stmt_relevant_p): Skip debug uses. gcc/testsuite/ChangeLog: PR debug/41225 * gfortran.dg/pr41225.f90: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@151438 138bc75d-0d04-0410-961f-82ee72b054a4