gcc/tree-vect-stmts.c
@@ -145,6 +145,9 @@ vect_stmt_relevant_p (gimple stmt, loop_vec_info loop_vinfo,
 	      if (vect_print_dump_info (REPORT_DETAILS))
 		fprintf (vect_dump, "vec_stmt_relevant_p: used out of loop.");
 
+	      if (is_gimple_debug (USE_STMT (use_p)))
+		continue;
+
 	      /* We expect all such uses to be in the loop exit phis
 		 (because of loop closed form)   */
 	      gcc_assert (gimple_code (USE_STMT (use_p)) == GIMPLE_PHI);
